<resources>
    <string name="app_name">Library Management System</string>
    <string name="save_button">Save</string>
    <string name="cancel_button">Cancel</string>
    <string name="title">Title</string>
    <string name="author">Author</string>
    <string name="pages">Pages</string>
    <string name="cover">Cover</string>
    <string name="summary">Summary</string>
    <string name="category">Category</string>
    <string name="add_note">Add Note</string>
    <string name="qa">QA</string>
    <string name="cat1"></string>

    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="cancel">Cancel</string>

    <string-array name="categories">
        <item>Mathematics</item>
        <item>History</item>
        <item>Cooking</item>
        <item>Religion</item>
        <item>Sport</item>
        <item>Medical</item>
        <item>Biography</item>
        <item>Grammar</item>
    </string-array>


</resources>
